[gd_scene load_steps=4 format=3 uid="uid://bwy444lg70j40"]

[ext_resource type="PackedScene" uid="uid://b66faf4i732d0" path="res://scenes/player.tscn" id="1_05aq4"]
[ext_resource type="Script" path="res://scenes/level.gd" id="1_agbb1"]
[ext_resource type="PackedScene" uid="uid://c6ughq30xr0fc" path="res://scenes/UI.tscn" id="3_di8q7"]

[node name="Level" type="Node2D"]
script = ExtResource("1_agbb1")

[node name="Ground" type="Node2D" parent="."]

[node name="ProjectTiles" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("1_05aq4")]
unique_name_in_owner = true
position = Vector2(565, 488)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.6, 0.6)
position_smoothing_enabled = true

[node name="UI" parent="." instance=ExtResource("3_di8q7")]
visible = false

[connection signal="grenade" from="Player" to="." method="_on_player_grenade"]
[connection signal="laser" from="Player" to="." method="_on_player_laser"]
[connection signal="load_button" from="UI" to="." method="_on_ui_load_button"]
[connection signal="save_button" from="UI" to="." method="_on_ui_save_button"]
